--- a/semtagger/pom.xml
+++ b/semtagger/pom.xml
@@ -25,5 +25,21 @@
 			<version>4.10</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- drools -->
+		<dependency>
+			<groupId>org.drools</groupId>
+			<artifactId>knowledge-api</artifactId>
+			<version>5.3.0.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.drools</groupId>
+			<artifactId>drools-core</artifactId>
+			<version>5.3.0.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.drools</groupId>
+			<artifactId>drools-compiler</artifactId>
+			<version>5.3.0.Final</version>
+		</dependency>
 	</dependencies>
 </project>
