initial drools integration

--- a/semtagger/pom.xml
+++ b/semtagger/pom.xml
@@ -3,11 +3,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>gate.creole</groupId>
-	<artifactId>semtagger</artifactId>
+	<artifactId>infertagger</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>semtagger</name>
+	<name>Inference Tagger</name>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
